--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,13 @@ name: Android CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - 'f/**'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - 'f/**'
 
 jobs:
   build:
